kubernetes/apps/network/unifi-controller/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: unifi
  namespace: network
  annotations:
    external-dns.alpha.kubernetes.io/hostname: unifi.${SECRET_DOMAIN}
spec:
  hostnames:
    - unifi.${SECRET_DOMAIN}
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: unifi-web
          namespace: network
          port: 8443
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
